# zero-deeplearning

./: README.md
goe/: .gitignore  requirements.txt
goe/neural/: graph_step.py  helper.py
goe/perceptron/: device.py
kenji/cpp/: .gitignore  CMakeLists.txt  Makefile
kenji/cpp/data/: CMakeLists.txt
kenji/cpp/include/: Network.h
kenji/cpp/include/common/: functions.h  gradient.h  utils.h
kenji/cpp/include/common/functions/: functions.h
kenji/cpp/include/common/functions/detail/: activation_functions.h  lost_functions.h
kenji/cpp/include/common/mnist/: IMnist.h  Mnist.h  MnistImage.h  MnistImageT.h  MnistLabel.h
kenji/cpp/src/: CMakeLists.txt  Network.cpp  cpp-deepleaning.cpp  cpp-deeplearning.cpp
kenji/cpp/src/common/: functions.cpp  gradient.cpp
kenji/cpp/src/common/functions/detail/: activation_functions.cpp  lost_functions.cpp
kenji/cpp/src/common/mnist/: Mnist.cpp  MnistImage.cpp  MnistLabel.cpp
kenji/cpp/test/: CMakeLists.txt
kenji/cpp/test/src/: Network-test.cpp  main_test.cpp
kenji/cpp/test/src/common/: functions_test.cpp  gradient_test.cpp  lost_functions_test.cpp
kenji/cpp/test/src/common/mnist/: mnist_test.cpp
kenji/py/: .gitignore  Makefile  mnist_show.py  neuralnet_mnist.py  neuralnet_sample.py  setup.cfg
kenji/py/common/: functions.py
kenji/py/dataset/: mnist.py
nobby/: test.py
nobby/ZeroDeepLearningJava/: .gitignore  build.gradle  settings.gradle
nobby/ZeroDeepLearningJava/gradle/wrapper/: gradle-wrapper.properties
nobby/ZeroDeepLearningJava/src/main/java/com/github/nobby/zerodl/: Executor.java
nobby/ZeroDeepLearningJava/src/main/java/com/github/nobby/zerodl/chap4/: Gradient.java  TrainNewralNet.java  TwoLayerNet.java
nobby/ZeroDeepLearningJava/src/main/java/com/github/nobby/zerodl/chap5/: Gradient.java  TrainNewralNet.java  TwoLayerNet.java  Weight.java
nobby/ZeroDeepLearningJava/src/main/java/com/github/nobby/zerodl/common/: Functions.java
nobby/ZeroDeepLearningJava/src/main/java/com/github/nobby/zerodl/common/layers/: AffineLayer.java  LayerInterface.java  ReluLayer.java  SoftmaxWithLossLayer.java
nobby/ZeroDeepLearningJava/src/main/java/com/github/nobby/zerodl/dataset/: BatchMnistData.java  Label.java  MnistData.java  MnistHandler.java
nobby/ZeroDeepLearningJava/src/test/java/com/github/nobby/zerodl/: TempTest.java
nobby/ZeroDeepLearningJava/src/test/java/com/github/nobby/zerodl/common/layers/: SoftmaxWithLossLayerTest.java
nobby/ZeroDeepLearningJava/src/test/java/com/github/nobby/zerodl/dataset/: MnistTest.java
nobby/chap_1/: graph.py  man.py
nobby/chap_2/: logic_gate_perceptron.py
nobby/chap_3/: neuralnet.py
nobby/chap_4/: train_neuralnet.py  two_layer_net.py
nobby/chap_5/: buy_apple.py  buy_apple_orange.py  gradient_check.py  layer_naive.py  train_neuralnet.py  two_layer_net.py
nobby/common/: functions.py  gradient.py  layers.py
noripi/: .gitignore  build.gradle  build.gradle.kts  settings.gradle
noripi/gradle/wrapper/: gradle-wrapper.properties
noripi/src/main/kotlin/io/github/noriyuki106/: Main.kt  Perceptron.kt
noripi/src/main/kotlin/io/github/noriyuki106/calc_graph/: CalcGraph.kt
noripi/src/main/kotlin/io/github/noriyuki106/calc_graph/layer/: AddLayer.kt  CalcGraphLayer.kt  MultiplyLayer.kt
noripi/src/main/kotlin/io/github/noriyuki106/call_graph/: CallGraph.kt
noripi/src/main/kotlin/io/github/noriyuki106/call_graph/layer/: AddLayer.kt  CallGraphLayer.kt  MultiplyLayer.kt
noripi/src/main/kotlin/io/github/noriyuki106/chapter1/: Main.kt
noripi/src/main/kotlin/io/github/noriyuki106/chapter2/: Main.kt  Perceptron.kt
noripi/src/main/kotlin/io/github/noriyuki106/chapter3/: Main.kt
noripi/src/main/kotlin/io/github/noriyuki106/data/: Mnist.kt
noripi/src/main/kotlin/io/github/noriyuki106/extension/: ArrayExtension.kt  ByteExtension.kt  DoubleExtension.kt  FunctionExtension.kt
noripi/src/main/kotlin/io/github/noriyuki106/main/: Chapter1.kt  Chapter2.kt  Chapter3.kt  Chapter4.kt  Chapter5.kt
noripi/src/main/kotlin/io/github/noriyuki106/neural_network/: ActivationFunctions.kt  LossFunctions.kt  NeuralNetwork.kt
noripi/src/main/kotlin/io/github/noriyuki106/numkt/: Either.kt  Matrix.kt  NumericArray.kt
noripi/src/main/kotlin/io/github/noriyuki106/numkt/function/: NumericBiFunction.kt  NumericFunction.kt  NumericMatrixFunction.kt  NumericMultivariableFunction.kt
noripi/src/main/kotlin/io/github/noriyuki106/sample/: chap1.kt  chap2.kt
sho/: build.sbt
sho/python/: .python-version
sho/python/ch01/: pyplot.py
sho/python/ch03/: nn_predictor.py
sho/src/main/scala/com/github/sh0nk/zerodl/ch01/: MathCalculate.scala
sho/src/main/scala/com/github/sh0nk/zerodl/ch02/: Perceptron.scala
sho/src/main/scala/com/github/sh0nk/zerodl/ch03/: ActivationFunctions.scala  Downloader.scala  MNISTLoader.scala  SimpleNN.scala
sho/src/main/scala/com/github/sh0nk/zerodl/ch04/: Gradients.scala  Logger.scala  MatrixActivationFunctions.scala  MatrixLossFunctions.scala  MiniBatchRunner.scala  NumericalGradientNN.scala
sho/src/main/scala/com/github/sh0nk/zerodl/ch05/: BGMiniBatchRunner.scala  BackpropagationGradientNN.scala  Layer.scala  Layers.scala
sho/src/main/scala/com/github/sh0nk/zerodl/ch06/: BGMiniBatchRunnerch06.scala  BackpropagationGradientNNch06.scala  BatchNormalization.scala  Optimizer.scala  Optimizers.scala  OptimizersOnContour.scala  TestPlot.scala  WeightLayer.scala  WeightLayers.scala
van/: .gitignore  Dockerfile  Makefile
van/src/: .coveragerc  requirement.txt  run-test.sh
van/src/chap2/: __init__.py  main.py
van/src/chap3/: __init__.py  activation_functions.py  main.py  network.py  neuralnet_mnist.py
van/src/chap4/: __init__.py  derivative_functions.py  gradient.py  loss_functions.py  numerical.py  simplenet.py  train_neuralnet.py  two_layer_net.py
van/src/chap5/: __init__.py  layer_native.py  two_layer_net.py
van/src/chap6/: __init__.py  dropout.py  multi_layer_net.py  optimizers.py  overfit_dropout.py  overfit_weight_decay.py
van/src/chap7/: __init__.py  layers.py  simple_conv_net.py
van/src/lib/: mnist.py  utils.py
van/src/test/: __init__.py
(+8 files in other folders)
